stuff for testing firebase

--- a/ionic.project
+++ b/ionic.project
@@ -1,6 +1,6 @@
 {
-  "name": "tinderClone",
-  "email": "",
+  "name": "Carnatic App",
+  "email": "siva.mahadevan1@gmail.com",
   "app_id": "",
   "package_name": ""
 }
