--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
     "gulp-minify-css": "^0.3.0",
     "gulp-rename": "^1.2.0",
     "gulp-coffee": ">=0.9",
-    "gulp-plumber": "^0.6.6"
+    "gulp-plumber": "^0.6.6",
+    "gulp-ng-annotate": "^0.4.3",
+    "gulp-uglify": "^1.0.2"
   },
   "devDependencies": {
     "bower": "^1.3.3",
-    "gulp-util": "^2.2.14",
-    "shelljs": "^0.3.0"
+    "gulp-util": "^2.2.14"
   }
 }
