--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,13 @@
 {
   "name": "carnatic",
-  "private": "true",
+  "private": true,
   "devDependencies": {
     "ionic": "driftyco/ionic-bower#1.0.0-beta.14"
-  }
+  },
+  "version": "0.0.1",
+  "homepage": "https://github.com/cheeselover/carnatic",
+  "authors": [
+    "Siva Mahadevan <siva.mahadevan1@gmail.com>"
+  ],
+  "description": "Mridangam korvai app"
 }
