--- a/bower.json
+++ b/bower.json
@@ -2,7 +2,8 @@
   "name": "carnatic",
   "private": true,
   "devDependencies": {
-    "ionic": "driftyco/ionic-bower#1.0.0-beta.14"
+    "ionic": "driftyco/ionic-bower#1.0.0-beta.14",
+    "ionic-ion-frost": "~1.0.0"
   },
   "version": "0.0.1",
   "homepage": "https://github.com/cheeselover/carnatic",
