--- a/bower.json
+++ b/bower.json
@@ -3,7 +3,8 @@
   "private": true,
   "devDependencies": {
     "ionic": "driftyco/ionic-bower#1.0.0-beta.14",
-    "ionic-ion-frost": "~1.0.0"
+    "ionic-ion-frost": "~1.0.0",
+    "ionic-ion-drawer": "*"
   },
   "version": "0.0.1",
   "homepage": "https://github.com/cheeselover/carnatic",
