--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,3 @@
-# Specifies intentionally untracked files to ignore when using Git
-# http://git-scm.com/docs/gitignore
-
 node_modules/
 platforms/
 plugins/
@@ -8,3 +5,5 @@ assets/lib/
 www/public/
 *.swp
 npm-debug.log
+engine/
+hooks/
